[package]
name = "sledgehammer_bindgen"
version = "0.2.4"
authors = ["Evan Almloff <ealmlof1@stumail.jccc.edu>"]
edition = "2021"
description = "Fast batched js bindings"
documentation = "https://docs.rs/sledgehammer_bindgen"
readme = "README.md"
repository = "https://github.com/demonthos/sledgehammer_bindgen/"
license = "MIT"
keywords = ["web", "wasm", "dom"]
categories = ["web-programming", "wasm", "api-bindings"]

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

[lib]
proc-macro = true

[dev-dependencies]
rand = "0.8.5"
sledgehammer_utils = "0.2.0"
wasm-bindgen = "0.2"
wry = { version = "0.33.0", features = ["devtools"] }

[dev-dependencies.web-sys]
version = "0.3"
features = ["Node", "console"]

[features]
default = ["web"]
web = []
