[package]
name = "sledgehammer_bindgen"
version = "0.4.0"
authors = ["Evan Almloff <ealmlof1@stumail.jccc.edu>"]
edition = "2021"
description = "Fast batched js bindings"
documentation = "https://docs.rs/sledgehammer_bindgen"
readme = "README.md"
repository = "https://github.com/demonthos/sledgehammer_bindgen/"
license = "MIT"
keywords = ["web", "wasm", "dom"]
categories = ["web-programming", "wasm", "api-bindings"]

[dependencies]
sledgehammer_bindgen_macro = { path = "sledgehammer_bindgen_macro", version = "0.4.0" }
wasm-bindgen = { version = "*", optional = true }

[dev-dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
sledgehammer_utils = "0.2.0"
wasm-bindgen = "0.2"
wry = { version = "0.33.0", features = ["devtools"] }

[dev-dependencies.web-sys]
version = "0.3"
features = ["Node", "console"]

[features]
default = ["web"]
web = ["wasm-bindgen", "sledgehammer_bindgen_macro/web"]

[workspace]
members = ["sledgehammer_bindgen_macro"]
