[package]
name = "sledgehammer_bindgen_macro"
version = "0.4.0"
authors = ["Evan Almloff <ealmlof1@stumail.jccc.edu>"]
edition = "2021"
description = "Fast batched js bindings"
documentation = "https://docs.rs/sledgehammer_bindgen"
readme = "README.md"
repository = "https://github.com/demonthos/sledgehammer_bindgen/"
license = "MIT"
keywords = ["web", "wasm", "dom"]
categories = ["web-programming", "wasm", "api-bindings"]

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

[lib]
proc-macro = true

[dev-dependencies.web-sys]
version = "0.3"
features = ["Node", "console"]

[features]
default = []
web = []
